New find/replace for foocoin

--- a/INSTALL
+++ b/INSTALL
@@ -1,9 +1,9 @@
-Building FooCoin
+Building Coine
 
-See doc/readme-qt.rst for instructions on building foocoin-qt,
+See doc/readme-qt.rst for instructions on building coine-qt,
 the intended-for-end-users, nice-graphical-interface, reference
-implementation of FooCoin.
+implementation of Coine.
 
-See doc/build-*.txt for instructions on building foocoin,
+See doc/build-*.txt for instructions on building coine,
 the intended-for-services, no-graphical-interface, reference
-implementation of FooCoin.
+implementation of Coine.
